--- a/AfroBeatTrivia_aplha/index.html
+++ b/AfroBeatTrivia_aplha/index.html
@@ -5,27 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./js/main.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/fire.css">
+    <link rel="stylesheet" type="text/css" href="css/starting.css"><!---->
+    <link rel="stylesheet" type="text/css" href="css/effect.css">
+    <link rel="stylesheet" type="text/css" href="css/progressBar.css">
+    <script src="./js/PreGame.js"></script>
 </head>
 
 <body>
-    <button onclick="playRandomSound()" id="butts">play me a random sound</button>
-    <audio id="audioPlayer"></audio>
-    <p>Select an answer</p>
-    <div id="choices">
-
-        <div id="choice_1">answer1</div>
-        <div id="choice_2">answer2</div>
-        <div id="choice_3">answer3</div>
-        <div id="choice_4">answer4</div>
+    <div class="fire">
+        <div class="flames">
+            <div class="flame"></div>
+            <div class="flame"></div>
+            <div class="flame"></div>
+            <div class="flame"></div>
+        </div>
+        <div class="logs"></div>
     </div>
-    <div id="myBody">
-        <div class="countdown" id="countdown">
-            <div class="timer" id="seconds"></div>
+    <div class="wrapper">
+        <div id="mainWrap" class="container">
+            <img src="./image/mask/mask3.png" id="mask1" alt="">
+            <img src="./image/mask/mask4.png" id="mask2" alt="">
+            <h1 id="titleScreen">African Trivia</h1>
         </div>
     </div>
-    <div id="win_msg">begin</div>
+
+    <div id="startBut"><button onclick="giveChoice()" class="button-78" role="button">begin</button></div>
+    </div>
+    <audio id="audioPlayer"></audio>
+
 </body>
 
 </html>
