button focus again

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <h1 id="media">tap to begin</h1>
     <div class="fire">
         <div class="flames">
             <div class="flame"></div>
